--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td><img src="C:\Users\WIS\Documents\Web Development\images\my profile picture-modified.png" height="200" alt="Chit Ko Ko profile picture"></td>
+            <td><img src="my profile picture-modified.png" height="200" alt="Chit Ko Ko profile picture"></td>
             <td>
                 <h1>Chit Ko Ko</h1>
                 <p>
